* trying to fix response on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ a:active {
 }
 
 /* For Mobile */
-@media screen and (max-width: 960px) {
+@media screen and ((max-width: 960px) or not (orientation: landscape)) {
     .container {
 	  margin-top: 30px;
 	  display: flex;
